[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://aug-9-2025/scripts/Main.gd" id="1_6r0qj"]
[ext_resource type="PackedScene" path="res://aug-9-2025/scenes/Penguin.tscn" id="2_km1n2"]
[ext_resource type="PackedScene" path="res://aug-9-2025/scenes/Fire.tscn" id="3_x7h2k"]
[ext_resource type="PackedScene" path="res://aug-9-2025/scenes/ChatUI.tscn" id="4_bb4gk"]

[node name="Main" type="Node2D"]
script = ExtResource("1_6r0qj")
penguin_scene = ExtResource("2_km1n2")
fire_scene = ExtResource("3_x7h2k")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ChatUI" parent="CanvasLayer" instance=ExtResource("4_bb4gk")] 

[node name="TopBar" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = 1024.0
margin_bottom = 40.0

[node name="HostButton" type="Button" parent="CanvasLayer/TopBar"]
text = "Host"

[node name="Address" type="LineEdit" parent="CanvasLayer/TopBar"]
size_flags_horizontal = 3
placeholder_text = "127.0.0.1"
text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="CanvasLayer/TopBar"]
text = "Join"

[node name="FeedButton" type="Button" parent="CanvasLayer/TopBar"]
text = "Feed"

